# superset-portable

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  QUICKSTART.md  README.md  RELEASE_NOTES.md  build_release.py  config.json  create_release.bat  lightdocs.json  start_docs.bat  start_lightdocs.bat  start_superset.bat
.github/workflows/: release.yml
docs/: HOWTO_EXCEL_DASHBOARD.md  HOWTO_UPDATE_DATA.md  RELEASES.md  RELEASE_POLICY.md  index.html  serve.py  world_rail.geojson
docs/demo_dashboard/: metadata.yaml
docs/demo_dashboard/charts/: Cargo_Distribution.yaml  Eastern_Polygon_Map.yaml  Eastern_Polygon_Table.yaml  Monthly_Stats.yaml  Stations_Map.yaml
docs/demo_dashboard/dashboards/: Eastern_Polygon.yaml  RZD_Analytics.yaml
docs/demo_dashboard/datasets/examples/: rzd_cargo_types.yaml  rzd_monthly_stats.yaml  rzd_stations.yaml
docs/demo_data/: README.md  rzd_cargo_types.csv  rzd_daily_operations.csv  rzd_incidents.csv  rzd_kpi_metrics.csv  rzd_lines.geojson  rzd_monthly_stats.csv  rzd_routes.csv  rzd_stations.csv  rzd_stations.geojson  rzd_stations_full.csv  rzd_stations_sng.csv  world_rail_stats.csv
docs/ru/: README.md  licensing.md  sql_lab.md  user_guide.md
knowledge/: faq.md  index.md  installation.md  quick_start.md
knowledge/admin/: config.md  roles.md  users.md
knowledge/charts/: bar_chart.md  big_number.md  index.md  line_chart.md  map.md  pie_chart.md  table.md
knowledge/dashboards/: filters.md  index.md  layout.md  sharing.md
knowledge/databases/: clickhouse.md  excel.md  index.md  postgresql.md  sqlite.md
knowledge/sql_lab/: index.md  templates.md  virtual_datasets.md
knowledge/troubleshooting/: cyrillic_paths.md  index.md  startup_errors.md
setup/: add_translations.ps1  add_translations.py  create_rzd_dashboard.py  download_python.ps1  fix_db_uri.py  generate_demo_data.py  import_dashboard.bat  install_superset.bat  register_rzd_datasets.py  setup_rzd_dashboard.py
src/: cache.rs  config.rs  data_loader.rs  demo_data.rs  docs_server.rs  gateway.rs  health_check.rs  launcher_ui.rs  main.rs  packer.rs  python.rs  superset.rs  tray.rs  validator.rs  watcher.rs
src/lightdocs/: document.rs  mod.rs  parser.rs  search.rs  server.rs  wikilinks.rs
superset_home/: superset_config.py
tests/: test_data.csv  ux_tests.rs
tests/performance/: generate_csv.py
