[package]
name = "superset-launcher"
version = "0.1.0"
edition = "2021"
description = "Portable Apache Superset Launcher"
authors = ["Portable Superset Project"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System tray (Windows)
tray-item = "0.10"

# Open browser
open = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "processthreadsapi", "handleapi"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size
