[package]
name = "superset-launcher"
version = "0.1.0"
edition = "2021"
description = "Portable Apache Superset Launcher"
authors = ["Portable Superset Project"]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System tray (Windows)
tray-item = "0.10"

# Open browser
open = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Crypto/random for secret key generation
rand = "0.8"
hex = "0.4"

# SQLite for demo data import
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
csv = "1.3"
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }


# Embedded cache database
sled = "0.34"

# HTTP server for static files (docs)
axum = { version = "0.7", features = ["http2", "ws"] }
tower-http = { version = "0.5", features = ["fs", "cors", "set-header", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# HTTP client for health check
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# Fast release packing
zip = { version = "0.6", default-features = false, features = ["deflate-zlib"] }
zstd = "0.13"
walkdir = "2"
tar = "0.4"

# LightDocs - Knowledge Base
pulldown-cmark = "0.10"

# Regex for wikilinks
regex = "1"

# YAML frontmatter parsing
serde_yaml = "0.9"

# File watching
notify = "6"

# Chrono for timestamps
chrono = { version = "=0.4.34", features = ["serde"] }

# High-Performance Data Loading
calamine = "0.24"
polars = { version = "0.37", features = ["lazy", "sql", "serde", "parquet", "strings"] }
connector_arrow = "0.4"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "processthreadsapi", "handleapi"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size
